<resources>
    <string name="app_name">Face_Recognition_Attendance_App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="announcementimage">announcementImage</string>
    <string name="upload">Upload</string>
    <string name="classDetails">Class Details</string>
    <string name="postDetails">Post Details</string>
    <string name="uploadedHistory">Upload History</string>
    <string name="profile">Profile</string>
    <string name="teacher_name">Teacher Name</string>
    <string name="department">Department</string>
    <string name="department1">Department:</string>
    <string name="class_location">Class Location</string>
    <string name="subject">Subject</string>
    <string name="subject1">Subject:</string>
    <string name="today_s_topic">Today\'s Topic</string>
    <string name="key">Key</string>
    <string name="minutes">Minutes</string>
    <string name="enter_class_session_time_in_n_minutes">Enter class session time in\n minutes</string>
    <string name="announcement_title">Announcement Title</string>
    <string name="description_optional">Description</string>
    <string name="due_date">Due Date</string>
    <string name="or">OR</string>
    <string name="select_an_image">Select an Image</string>
    <string name="online">Online</string>
    <string name="name">Name:</string>
    <string name="duration">Duration:</string>
    <string name="location">Location:</string>
    <string name="topic">Topic:</string>
    <string name="started_at">Started At:</string>
    <string name="time_left">Time Left:</string>
    <string name="announcement_data">Announcement data</string>
    <string name="home">Home</string>
    <string name="class_not_posted_yet">Class not posted yet</string>
    <string name="get_started">Get Started as Teacher</string>
    <string name="get_started1">Get Started as Student</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="class_nconnect">Class\nConnect</string>
    <string name="inspiring_tech_solution_for_a_nbrighten_future">Inspiring Tech Solution for a\nBrighten future</string>
    <string name="have_no_account">Don\'t have account?</string>
    <string name="log_in">Login</string>
    <string name="sig_up">SignUp</string>
    <string name="login">Login</string>
    <string name="or_login_with">Or\n Login with</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already Have an account</string>
    <string name="back_to_log_in">Back to Log in</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="we_will_send_you_an_email_with_a_link_to_reset_the_password">we will send you an Email with a link to reset the password</string>
    <string name="if_you_forget_your_password_don_t_worry_nyou_need_to_enter_your_registered_email_here">If you forget your password don\'t worry \nyou need to enter your registered Email here!</string>
    <string name="name1">Name</string>
    <string name="please_check_you_inbox">Please Check you Inbox</string>
    <string name="no_data_to_show">No Data To Show</string>
    <string name="create_group">Create Group</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit_data">Edit Data</string>
    <string name="share_on_whatsapp">Share On Whatsapp</string>
    <string name="edit_or_share">Edit or Share</string>
    <string name="_10003">✓</string>
    <string name="delete">Delete</string>
    <string name="no">NO</string>
    <string name="are_you_sure_you_want_to_delete_this">Are you sure you want to delete this?</string>
    <string name="notification">Notification</string>
    <string name="help_amp_support"><![CDATA[help & Support]]></string>
    <string name="logout">Logout</string>
    <string name="rate_this_app">Rate this App</string>
    <string name="term_amp_conditions"><![CDATA[Term & Conditions]]></string>

</resources>