<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ice"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/signUpContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/ice">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/sig_up"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/textView11">


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout3"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="50dp"
                        app:boxBackgroundMode="outline"
                        app:boxStrokeColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/SignUpName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name1"
                            android:inputType="textPersonName"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="50dp"
                        app:boxBackgroundMode="outline"
                        app:boxStrokeColor="@color/black"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/SignUpEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout2"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="50dp"
                        app:boxBackgroundMode="outline"
                        app:boxStrokeColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/SignUpPass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout4"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="50dp"
                        app:boxBackgroundMode="outline"
                        app:boxStrokeColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/SignUpConPass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/confirm_password"
                            android:inputType="textPassword"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/scanfaceBtn"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:src="@drawable/scan_face_img"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="20dp"
                        app:civ_border_width="2dp"
                        app:civ_border_color="@color/black"/>

                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/singUpBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="11dp"
                    android:layout_marginEnd="50dp"
                    android:backgroundTint="@color/teal_200"
                    android:text="@string/sig_up"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:cornerRadius="12dp"
                    android:textAllCaps="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/linearLayout"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="@+id/singUpBtn"
                    app:layout_constraintStart_toStartOf="@+id/singUpBtn"
                    app:layout_constraintTop_toBottomOf="@+id/singUpBtn" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/teal_200"
                    android:text="@string/log_in"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:cornerRadius="12dp"
                    android:textAllCaps="false"
                    app:layout_constraintEnd_toEndOf="@+id/singUpBtn"
                    app:layout_constraintStart_toStartOf="@+id/singUpBtn"
                    app:layout_constraintTop_toBottomOf="@+id/textView17" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>